--- a/style.css
+++ b/style.css
@@ -1,11 +1,30 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
-
 .colour{
     color: orange;
 }
-
 h1{
     font-size: 50px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(orange,tomato);
+    padding: 10px 40px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+}
+.first-part{
+    display: flex;
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+.half-width{
+    width: 50%;
+    padding-left: 6%;
+}
+.half-width img{
+    width: 90%;
 }
